# dbus-sensors

./: .clang-format-ignore  .clang-tidy  .codespellrc  .gitignore  0001-pwm-sensor-Align-Target-with-user-intent.patch  0001-test.patch  CMakeLists.txt  Cargo.toml  MAINTAINERS  ModbusSensor.cpp  OWNERS  README.md  groups  meson.build  meson.options  meson_options.txt  project.config
include/: ADCSensor.hpp  AmpereCPU.hpp  AsioHelper.hpp  CPUSensor.hpp  ChassisIntrusionSensor.hpp  DeviceMgmt.hpp  ExitAirTempSensor.hpp  ExternalSensor.hpp  FileHandle.hpp  GPIOCableSensor.hpp  GPIOPresenceSensor.hpp  GPIOSensor.hpp  GpioStateSensor.hpp  HSCNodePower.hpp  HostSensor.hpp  HwmonTempSensor.hpp  IIOSensor.hpp  IntelCPUSensor.hpp  IpmbFWVersion.hpp  IpmbPowerState.hpp  IpmbSDRSensor.hpp  IpmbSensor.hpp  MCUTempSensor.hpp  NVMe.hpp  NVMeBasic.hpp  NVMeBasicContext.hpp  NVMeContext.hpp  NVMeController.hpp  NVMeDevice.hpp  NVMeDeviceList.hpp  NVMeDrive.hpp  NVMeIntf.hpp  NVMeMCTPContext.hpp  NVMeMCTPSensor.hpp  NVMeMi.hpp  NVMeMiFake.hpp  NVMePlugin.hpp  NVMeSensor.hpp  NVMeStorage.hpp  NVMeSubsys.hpp  (+18 more)
include/linux/: peci-ioctl.h
service_files/: meson.build  xyz.openbmc_project.adcsensor.service  xyz.openbmc_project.amperecpusensor.service  xyz.openbmc_project.batterystatus.service  xyz.openbmc_project.cablemonitor.service  xyz.openbmc_project.cpusensor.service  xyz.openbmc_project.exitairsensor.service  xyz.openbmc_project.externalsensor.service  xyz.openbmc_project.fansensor.service  xyz.openbmc_project.gpiopresencesensor.service  xyz.openbmc_project.gpiosensor.service  xyz.openbmc_project.gpusensor.service  xyz.openbmc_project.hostsensor.service  xyz.openbmc_project.hscnodepower.service  xyz.openbmc_project.hwmontempsensor.service  xyz.openbmc_project.iiosensor.service  xyz.openbmc_project.intelcpusensor.service  xyz.openbmc_project.intrusionsensor.service  xyz.openbmc_project.ipmbsensor.service  xyz.openbmc_project.leakdetector.service  xyz.openbmc_project.mctpreactor.service  xyz.openbmc_project.mcutempsensor.service  xyz.openbmc_project.modbussensor.service  xyz.openbmc_project.nvidiagpusensor.service  xyz.openbmc_project.nvmesensor.service  xyz.openbmc_project.oemsensor.service  xyz.openbmc_project.pldmsensor.service  xyz.openbmc_project.psusensor.service  xyz.openbmc_project.redfishsensor.service  xyz.openbmc_project.smbpbisensor.service  xyz.openbmc_project.valvemonitor.service
src/: .clang-format  .meson.build.swp  ADCSensor.cpp  ADCSensor.hpp  ADCSensorMain.cpp  AmpereCPU.cpp  AmpereCPUMain.cpp  CPUSensor.cpp  CPUSensorMain.cpp  ChassisIntrusionSensor.cpp  ChassisIntrusionSensor.hpp  DbusSensorsMain.cpp  DeviceMgmt.cpp  DeviceMgmt.hpp  Discrete.hpp  EntityManager.cpp  EntityManager.hpp  EntityManagerInterface.cpp  EntityManagerInterface.hpp  ExitAirTempSensor.cpp  ExitAirTempSensor.hpp  ExternalSensor.cpp  ExternalSensor.hpp  ExternalSensorMain.cpp  FanMain.cpp  FileHandle.cpp  FileHandle.hpp  GPIInterface.cpp  GPIInterface.hpp  GPIOCableSensor.cpp  GPIOCableSensorMain.cpp  GPIOInterface.cpp  GPIOInterface.hpp  GPIOPresenceSensor.cpp  GPIOPresenceSensor.hpp  GPIOPresenceSensorMain.cpp  GPIOSensor.cpp  GPIOSensorMain.cpp  GPOInterface.cpp  GPOInterface.hpp  (+105 more)
src/ADC/: ADCSensor.hpp  ADCSensorMain.cpp  meson.build
src/CableMonitor/: CableConfig.cpp  CableConfig.hpp  CableEvent.cpp  CableEvent.hpp  CableMonitor.cpp  CableMonitor.hpp  meson.build
src/ExitAir/: ExitAirTempSensor.hpp  meson.build
src/Fan/: PresenceGpio.hpp  TachSensor.hpp  meson.build
src/GPIOPresenceSensor/: Config.cpp  Config.hpp  GPIOPresenceSensor.cpp  GPIOPresenceSensor.hpp  GPIOPresenceSensorMain.cpp
src/HwmonTemp/: HwmonTempSensor.hpp  meson.build
src/IPMB/: IpmbSDRSensor.cpp  IpmbSensor.hpp  IpmbSensorMain.cpp  meson.build
src/IntelCPU/: IntelCPUSensorMain.cpp  meson.build
src/Intrusion/: IntrusionSensorMain.cpp  meson.build
src/LeakDetection/: LeakDetectionManager.cpp  LeakDetectionManager.hpp  LeakDetector.cpp  LeakDetector.hpp  LeakEvents.cpp  LeakEvents.hpp  LeakUtils.cpp  LeakUtils.hpp  fdio.hpp  meson.build
src/MCUTemp/: meson.build
src/NVME/: NVMeSensor.cpp  meson.build
src/PSU/: PSUSensor.cpp  meson.build
src/adc/: ADCSensor.cpp  ADCSensor.hpp  ADCSensorMain.cpp  meson.build
src/asio/: DeviceMgmt.cpp  DeviceMgmt.hpp  MctpAsioEndpoint.cpp  MctpAsioEndpoint.hpp  PwmSensor.cpp  PwmSensor.hpp  Thresholds.cpp  Thresholds.hpp  meson.build  sensor.hpp
src/async-task/: EntityManagerInterface.cpp  EntityManagerInterface.hpp  GPIOInterface.hpp  NotifyWatch.cpp  SystemdInterface.cpp  meson.build
src/async_task/: EntityManagerInterface.cpp  GPIOInterface.cpp
src/batterystatus/: BatteryStatus.cpp  BatteryStatus.hpp  BatteryStatusMain.cpp  meson.build
src/cable-monitor/: CableConfig.cpp  CableConfig.hpp  CableEvent.cpp  CableEvent.hpp  CableEvents.cpp  CableEvents.hpp  CableMonitor.cpp  CableMonitor.hpp  OWNERS  meson.build
src/common/: DeviceMgmt.cpp  EntityManagerInterface.cpp  PwmSensor.cpp  SystemdInterface.cpp  Thresholds.hpp  meson.build  sensor.hpp
src/config/: dbus-sensor_config.h.in  meson.build
src/exit-air/: ExitAirTempSensor.cpp  ExitAirTempSensor.hpp  meson.build
src/fan/: FanMain.cpp  FanSensor.hpp  PresenceGpio.cpp  PresenceGpio.hpp  TachSensor.cpp  TachSensor.hpp  meson.build
src/gpu/: GpuDevice.cpp  GpuDevice.hpp  GpuMctpVdm.cpp  GpuMctpVdm.hpp  GpuPowerSensor.cpp  GpuPowerSensor.hpp  GpuSensor.cpp  GpuSensor.hpp  GpuSensorMain.cpp  GpuTLimitSensor.cpp  GpuTLimitSensor.hpp  GpuThresholds.cpp  GpuThresholds.hpp  KernelSocketInterface.hpp  MctpRequester.cpp  MctpRequester.hpp  MctpSocket.hpp  OcpMctpVdm.cpp  OcpMctpVdm.hpp  README.md  Requester.hpp  UpdatableSensor.cpp  UpdatableSensor.hpp  meson.build  types.hpp
src/hwmon-temp/: HwmonTempMain.cpp  HwmonTempSensor.cpp  HwmonTempSensor.hpp  meson.build
tests/: meson.build  test_HwmonTempSensor.cpp  test_IpmbSensor.cpp  test_MCTPEndpoint.cpp  test_MCTPReactor.cpp  test_NVMeSensor.cpp  test_SensorPaths.cpp  test_TachSensor.cpp  test_Threshold.cpp  test_Utils.cpp  test_main.cpp  test_nvme_mi.cpp
(+365 files in other folders)
