option('adc', type: 'feature', description: 'Enable ADC sensor.')
option('intel-cpu', type: 'feature', description: 'Enable CPU sensor.')
option('exit-air', type: 'feature', description: 'Enable exit air sensor.')
option('fan', type: 'feature', description: 'Enable fan sensor.')
option(
    'hwmon-temp',
    type: 'feature',
    description: 'Enable HWMON temperature sensor.',
)
option('intrusion', type: 'feature', description: 'Enable intrusion sensor.')
option('ipmb', type: 'feature', description: 'Enable IPMB sensor.')
option('mctp', type: 'feature', description: 'Enable MCTP endpoint management')
option('mcu', type: 'feature', description: 'Enable MCU sensor.')
option('nvme', type: 'feature', description: 'Enable NVMe sensor.')
option('psu', type: 'feature', description: 'Enable PSU sensor.')
option('nvidia-gpu', type: 'feature', description: 'Enable GPU sensor.')
option('external', type: 'feature', description: 'Enable External sensor.')
option('tests', type: 'feature', value: 'enabled', description: 'Build tests.')
option(
    'validate-unsecure-feature',
    type: 'feature',
    value: 'disabled',
    description: 'Enables unsecure features required by validation. Note: mustbe turned off for production images.',
)
option(
    'insecure-sensor-override',
    type: 'feature',
    value: 'disabled',
    description: 'Enables Sensor override feature without any check.',
)
option(
    'leakdetector',
    type: 'feature',
    description: 'Enable Liquid Leak Detector.',
)
option('smbpbi', type: 'feature', description: 'Enable SMBPBI sensor.')
option('cable-monitor', type: 'feature', description: 'Enable Cable monitor.')
